--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,9 @@ img {
   width: 100%;
   margin: 0 auto;
   z-index: 999;
-  /* border-bottom: 1px solid #fff; */
+  border-bottom: 1px solid #fff;
   padding: 10px 0;
-  background-color: #30d5c8;
+  /* background-color: #30d5c8; */
 }
 
 .logo {
