--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: #bfaea4;
   background-color: #aba9bc;
   background-color: #c8c7e7;
-}
+  }
 
 button,
 input,
@@ -65,7 +65,7 @@ img {
 }
 
 /* 
-for Blue color #4e0416  #0c3b2e
+for Blue color #4e0416  #0c3b2e  #10475e
 for body #c8c7e7
 */
 
