--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   word-break: break-word;
   background-color: #aba9bc;
   background-color: #c8c7e7;
+  background-color: #ffefcd;
   }
 
 button,
